<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/register_layout_profile_picture"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/register_layout_profile_image"
        android:src="@drawable/ic_picture_image" />

    <LinearLayout
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/register_layout_text_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_layout_text_first_name" />

            <EditText
                android:id="@+id/register_layout_input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/register_layout_text_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_layout_text_last_name" />

            <EditText
                android:id="@+id/register_layout_input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/register_layout_text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_layout_text_email" />

    <EditText
        android:id="@+id/register_layout_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/register_layout_text_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_layout_text_phone" />

    <EditText
        android:id="@+id/register_layout_input_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" />

    <TextView
        android:id="@+id/register_layout_text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_layout_text_password" />

    <EditText
        android:id="@+id/register_layout_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/register_layout_is_user_consultant_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register_layout_is_user_consultant_text" />

    <TextView
        android:id="@+id/register_layout_text_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register_layout_responsible_country_spinner_text" />

    <Spinner
        android:id="@+id/register_layout_country_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/register_layout_register_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_layout_register_button_text" />

    </LinearLayout>


</LinearLayout>